--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,23 @@
+body {
+  display: flex;
+  justify-content: center;
+}
+
+h1 {
+  text-align: center;
+}
+
 .grid {
-  width: 500px;
-  height: 500px;
+  display: flex;
+}
+
+.row {
+  display: flex;
 }
 
 .cell {
   border: 1px solid black;
   background-color: lightgray;
-  height: 50px;
   width: 50px;
+  height: 50px;
 }
