--- a/styles.css
+++ b/styles.css
@@ -13,19 +13,21 @@ h1 {
 
 .grid {
   display: flex;
-}
-
-.row {
-  display: flex;
+  height: 800px;
+  width: 800px;
+  justify-content: center;
+  flex-grow: 0;
 }
 
 .cell {
   border: 1px solid black;
   background-color: lightgray;
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
 }
 
 .cellActive {
   background-color: red;
 }
+
+/* The content of the grid is spilling over */
