--- a/styles.css
+++ b/styles.css
@@ -11,23 +11,34 @@ h1 {
   text-align: center;
 }
 
+.canvas {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 .grid {
   display: flex;
-  height: 800px;
-  width: 800px;
+  flex-direction: column;
   justify-content: center;
-  flex-grow: 0;
+  width: 600px;
+  height: 600px;
+  border: 15px solid salmon;
+}
+
+.row {
+  display: flex;
+  flex: 1;
 }
 
 .cell {
   border: 1px solid black;
   background-color: lightgray;
-  width: 30px;
-  height: 30px;
+  flex: 1;
 }
 
 .cellActive {
   background-color: red;
 }
-
-/* The content of the grid is spilling over */
