display slider value

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ h1 {
   justify-content: center;
   width: 600px;
   height: 600px;
-  border: 15px solid salmon;
+  border: 15px solid #003153;
 }
 
 .row {
@@ -41,4 +41,29 @@ h1 {
 
 .cellActive {
   background-color: #d9381e;
+}
+
+.slider {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 40%;
+  height: 5px;
+  border-radius: 5px;
+  background: #003153;
+  outline: none;
+  opacity: 0.9;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #d9381e;
+  cursor: pointer;
 }
