--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,31 @@
 
 body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
 h1 {
   text-align: center;
+  font-size: 60px;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+}
+
+.controls {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.app {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
 }
 
 .canvas {
@@ -46,7 +66,7 @@ h1 {
 .slider {
   -webkit-appearance: none;
   appearance: none;
-  width: 40%;
+  width: 100%;
   height: 5px;
   border-radius: 5px;
   background: #003153;
@@ -66,4 +86,16 @@ h1 {
   border-radius: 50%;
   background: #d9381e;
   cursor: pointer;
+}
+
+#clearBtn {
+  padding: 10px;
+  border: solid 4px #003153;
+  border-radius: 10px;
+  transition-duration: 0.4s;
+}
+
+#clearBtn:hover {
+  background-color: azure;
+  transform: scale(1.1);
 }
